k8s/go_app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: go-app-deployment
spec:
 replicas: 3
 selector: 
    matchLabels:
       app: go-web-app
 template:
   metadata:
      labels:
        app: go-web-app
   spec:
     containers:
     - name: go-app-continer
       image: shiv2bhargava/go-web-app
       ports:
       - containerPort: 8080
