k8s/go_app_services.yml
kind: Service
apiVersion: v1
metadata: 
  name: go-app-svc
spec:
  selector:
    app: go-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
