k8s/go_app_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: go-app-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app
            port:
              number: 80
